[package]
name = "itera-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
os_info = "3.12.0"
owo-colors = "=4.2.2"
platform-info = "2.0.5"
reqwest = { version = "0.12.23", features = ["json"] }
rpassword = "7.4.0"
rustyline = "17.0.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.15"
tokio = { version = "1.47.1", features = ["full"] }

